Add fragment for text message input and structures to store and load text messages from local storage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
     <string name="recommendation_drinks_name">Drink Name</string>
     <string name="recommendation_drinks_amount">Drink Amount</string>
     <string name="no_value">Drink Amount</string>
+    <string name="textMessageInputTitle">This is a title</string>
+    <string name="textMessageInputDescription">This is a description</string>
 
 </resources>
