--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="typingChallengeIntroDescription">Let\'s start with a quick typing challenge. Go!</string>
     <string name="baselineIntroDescription">In order to evaluate your Drunkenness Score, we need to learn about your typing performance when being sober. We created a quick typing challenge for you. Let\'s go!</string>
 
-    <string name="recommendation_drunkennessScore">Your drunkenness score is:</string>
+    <string name="recommendation_drunkennessScore">Your Drunkenness Score is:</string>
     <string name="recommendation_intro">I would recommend the following:</string>
     <string name="recommendation_drinks_image">Drink Image</string>
     <string name="recommendation_drinks_name">Drink Name</string>
@@ -39,10 +39,9 @@
     <string name="recommendation_safeToText_partOne">Your message for </string>
     <string name="recommendation_safeToText_partTwo"> was found to be </string>
 
-
     <string name="no_value">No value</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
+    <string name="calculating_drunkenness_score">Calculating Drunkenness</string>
+    <string name="please_wait">Just a little longer!</string>
 
     <string name="textMessageInputTitle">Type your message 💬</string>
     <string name="textMessageInputDescription">This is a description</string>
