Read alcohol list from csv and enable preference setting, prepared alcohol list for recommendation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
 
     <string name="next_name">Continue</string>
     <string name="next_typingIntro">Start typing challenge</string>
-    <string name="next_completeOnboarding">Continue to Drunk-O-Meter</string>
+    <string name="next_completeOnboarding">Continue</string>
     <string name="next_takeSelfie">Take a Selfie</string>
 
     <string name="usernameTitle">Welcome to Drunk-O-Meter!</string>
